complete design for boxes

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="box">
       <div class="side-bar">
         <div class="middle-box red-box"></div>
-        <div>
+        <div class="four-box">
+          <div class="small-box gray-box odd-box"></div>
           <div class="small-box gray-box"></div>
-          <div class="small-box gray-box"></div>
-          <div class="small-box gray-box"></div>
+          <div class="small-box gray-box odd-box"></div>
           <div class="small-box gray-box"></div>
         </div>
       </div>
