responsive for mobile devices

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="side-bar">
         <div class="middle-box red-box"></div>
         <div class="four-box">
-          <div class="small-box gray-box odd-box"></div>
+          <div class="small-box gray-box odd-box mobile-box"></div>
           <div class="small-box gray-box"></div>
           <div class="small-box gray-box odd-box"></div>
           <div class="small-box gray-box"></div>
