responsive for tablet devices

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="three-box">
           <div class="green-box same-box"></div>
           <div class="blue-box same-box"></div>
-          <div class="red-box same-box"></div>
+          <div class="red-box same-box span-box"></div>
         </div>
       </div>
     </div>
